updated build and start

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Logical UI library for ReactJS",
   "main": "src/index.js",
   "scripts": {
-    "build": "rollup -c",
+    "start": "npm-run-all --parallel docz:dev rollup:dev",
+    "build": "npm-run-all rollup:build docz:build",
+    "rollup:dev": "rollup -c -w/--watch",
+    "rollup:build": "rollup -c",
     "docz:dev": "docz dev",
     "docz:build": "docz build",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -49,6 +52,7 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.2",
+    "npm-run-all": "^4.1.3",
     "rollup": "^0.65.2",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.6",
